--- a/frontend/01_start.html
+++ b/frontend/01_start.html
@@ -1,3 +1,25 @@
 <!-- --------------------------------- -->
 <!--       Add shape, move shape       -->
 <!-- --------------------------------- -->
+
+<div id="circle" style="
+    z-index: 1;
+    position: absolute;
+    left: 100px;
+    top: 200px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: black;
+"></div>
+
+<button onclick="moveCircle()">move</button>
+
+<script>
+    // comment
+    var circle = document.getElementById('circle')
+
+    function moveCircle(){
+        circle.style.left = "250px";
+    }
+</script>
