--- a/frontend/02_timer.html
+++ b/frontend/02_timer.html
@@ -1,3 +1,37 @@
 <!-- --------------------------------- -->
 <!--       Move shape with timer       -->
 <!-- --------------------------------- -->
+
+<!-- --------------------------------- -->
+<!--       Add shape, move shape       -->
+<!-- --------------------------------- -->
+
+<div id="circle" style="
+    z-index: 1;
+    position: absolute;
+    left: 100px;
+    top: 200px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: black;
+"></div>
+
+<button onclick="moveCircle()">move</button>
+
+<script>
+    // comment
+    var circle = document.getElementById('circle')
+    var x = 100;
+    var y = 200;
+
+    function moveCircle(){
+        x = x + 5;
+        y = y + 5;
+
+        circle.style.left = x +'px';
+        circle.style.top = y + 'px';
+        setTimeout(moveCircle, 100);
+
+    }
+</script>
